# hdzero-goggle

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ONBOARD MIC REPAIR  README.md  VERSION  flake.nix  run-native.sh  setup.sh  toolchain.cmake
.devcontainer/: Dockerfile  (+7 more)
ext/dropbear/: CMakeLists.txt
lib/esp-loader/: CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
lib/ffmpeg/include/libavutil/: ffversion.h
lib/ffmpeg/lib/: libavcodec.so.59.18.100  libavformat.so.59  libavformat.so.59.16.100  libavutil.so.57  libavutil.so.57.17.100
lib/live/: CMakeLists.txt
lib/live/include/BasicUsageEnvironment/: BasicHashTable.hh  BasicUsageEnvironment.hh  BasicUsageEnvironment0.hh  BasicUsageEnvironment_version.hh  DelayQueue.hh  HandlerSet.hh
lib/live/include/UsageEnvironment/: HashTable.hh  UsageEnvironment.hh  UsageEnvironment_version.hh  strDup.hh
lib/live/include/groupsock/: GroupEId.hh  Groupsock.hh  GroupsockHelper.hh  IOHandlers.hh  NetAddress.hh  NetInterface.hh  groupsock_version.hh
lib/live/include/liveMedia/: AC3AudioFileServerMediaSubsession.hh  AC3AudioRTPSink.hh  AC3AudioRTPSource.hh  AC3AudioStreamFramer.hh  ADTSAudioFileServerMediaSubsession.hh  ADTSAudioFileSource.hh  ADTSAudioStreamDiscreteFramer.hh  AMRAudioFileServerMediaSubsession.hh  AMRAudioFileSink.hh  AMRAudioFileSource.hh  AMRAudioRTPSink.hh  AMRAudioRTPSource.hh  AMRAudioSource.hh  AVIFileSink.hh  AudioInputDevice.hh  AudioRTPSink.hh  Base64.hh  BasicUDPSink.hh  BasicUDPSource.hh  BitVector.hh  ByteStreamFileSource.hh  ByteStreamMemoryBufferSource.hh  ByteStreamMultiFileSource.hh  DVVideoFileServerMediaSubsession.hh  DVVideoRTPSink.hh  DVVideoRTPSource.hh  DVVideoStreamFramer.hh  DeviceSource.hh  DigestAuthentication.hh  FileServerMediaSubsession.hh  FileSink.hh  FramedFileSource.hh  FramedFilter.hh  FramedSource.hh  GSMAudioRTPSink.hh  GenericMediaServer.hh  H261VideoRTPSource.hh  H263plusVideoFileServerMediaSubsession.hh  H263plusVideoRTPSink.hh  H263plusVideoRTPSource.hh  (+117 more)
lib/log/: CMakeLists.txt
lib/log/include/log/: log.h
lib/log/src/: log.c
lib/softwinner/: CMakeLists.txt
lib/softwinner/include/awcdr/include/V5CDRTP/dd_serv/: common_define.h  common_define.h.debug  common_define.h.release  curl_http.h  dd_AGPS.h  dd_base64.h  dd_common.h  dd_debug.h  dd_dlist.h  dd_encrypt.h  dd_https.h  dd_json.h  dd_log.h  dd_mqtt.h  dd_platform.h  dd_queue.h  globalInfo.h
lib/softwinner/include/awcdr/include/V5CDRTP/dragonboard/: dragonboard.h
lib/softwinner/include/awcdr/include/V5CDRTP/edog/: EdogGlobal.h
lib/softwinner/include/awcdr/include/V5CDRTP/https/: openssl_hostname_validation.h
lib/softwinner/include/awcdr/include/V5CDRTP/json/: writer.h
lib/softwinner/include/awcdr/include/V5CDRTP/minigui/: common.h  customial.h  gdi.h  mgconfig.h  window.h
lib/softwinner/include/awcdr/include/V5CDRTP/mqtt/: MQTTClient.h  MQTTLinux.h
lib/softwinner/include/awcdr/include/V5CDRTP/onvif/: OnvifConnector.h
lib/softwinner/include/awcdr/include/V5CDRTP/rtsp/: MediaStream.h
lib/softwinner/include/awcdr/include/V5CDRTP/tutk/: AVAPIs.h  RDTAPIs.h
lib/softwinner/include/awcdr/include/dragonboard/: dragonboard.h
lib/softwinner/include/awcdr/include/onvif/: OnvifConnector.h
lib/softwinner/include/awcdr/include/rtsp/: MediaStream.h  TinyServer.h
lib/softwinner/include/awcdr/include/tutk/: IOTCAPIs.h  P2PTunnelAPIs.h
lib/softwinner/include/framework/include/media/bdii/: EyeseeBDII.h  EyeseeBDIICommon.h
lib/softwinner/include/framework/include/media/camera/: CameraListener.h  CameraParameters.h  EyeseeCamera.h  ModData.h  PictureRegionCallback.h  VIPPOSD.h  camera.h  type_camera.h
lib/softwinner/include/framework/include/media/eis/: EyeseeEIS.h  EyeseeEISCommon.h
lib/softwinner/include/framework/include/media/ise/: EyeseeISE.h  EyeseeISECommon.h
lib/softwinner/include/framework/include/media/motion/: EyeseeMotion.h
lib/softwinner/include/framework/include/media/player/: EyeseePlayer.h
lib/softwinner/include/framework/include/media/recorder/: EyeseeRecorder.h  MediaCallbackDispatcher.h
lib/softwinner/include/framework/include/media/thumbretriever/: EyeseeThumbRetriever.h
lib/softwinner/include/framework/include/media/usbcamera/: EyeseeUSBCamera.h  UvcChnDefine.h
lib/softwinner/include/framework/include/media/videoresizer/: EyeseeVideoResizer.h  VREncBuffer.h
lib/softwinner/include/framework/include/utils/: CMediaMemory.h  CallbackDispatcher.h  Condition.h  Errors.h  EyeseeMessageQueue.h  EyeseeQueue.h  MediaStructConvert.h  Mutex.h  OSAL_Mutex.h  OSAL_Queue.h  Thread.h
lib/softwinner/include/middleware/config/: ConfigOption.h  mpp_config.mk  mpp_version.h
lib/softwinner/include/middleware/include/media/: mm_comm_adec.h  mm_comm_aenc.h  mm_comm_aio.h  mm_comm_clock.h  mm_comm_demux.h  mm_comm_eis.h  mm_comm_ise.h  mm_comm_mux.h  mm_comm_rc.h  mm_comm_region.h  mm_comm_sys.h  mm_comm_tenc.h  mm_comm_uvc.h  mm_comm_vdec.h  mm_comm_venc.h  mm_comm_vi.h  mm_comm_video.h  mm_comm_vo.h  mm_common.h  mpi_adec.h  mpi_ae.h  mpi_aenc.h  mpi_af.h  mpi_ai.h  mpi_ao.h  mpi_awb.h  mpi_clock.h  mpi_demux.h  mpi_eis.h  mpi_ise.h  mpi_isp.h  mpi_mux.h  mpi_region.h  mpi_sys.h  mpi_tenc.h  mpi_uvc.h  mpi_vdec.h  mpi_venc.h  mpi_vi.h  mpi_videoformat_conversion.h  (+1 more)
lib/softwinner/include/middleware/include/utils/: aw_type.h  dup2SeldomUsedFd.h  plat_defines.h  plat_errno.h  plat_log.h  plat_math.h  plat_systrace.h  plat_type.h
lib/softwinner/include/middleware/media/include/: CDX_MediaFormat.h  CDX_fileformat.h  ChannelRegionInfo.h  media_common.h  mpi_adec_common.h  mpi_aenc_common.h  mpi_clock_common.h  mpi_demux_common.h  mpi_eis_common.h  mpi_ise_common.h  mpi_mux_common.h  mpi_region_private.h  mpi_tenc_common.h  mpi_uvc_common.h  mpi_vdec_common.h  mpi_venc_private.h  mpi_vi_private.h  mpi_vo_common.h
lib/softwinner/include/middleware/sample/configfileparser/: confparser.h
lib/softwinner/include/system/public/rgb_ctrl/: rgb_ctrl.h
lib/softwinner/include/system/public/smartlink/: smartlink.h
lib/softwinner/lib/: libasound.so.2  libasound.so.2.0.0  libz.so.1.2.8
(+703 files in other folders)
